--- a/EmacsVsVi/EmacsVsVi.ipynb
+++ b/EmacsVsVi/EmacsVsVi.ipynb
@@ -74,7 +74,8 @@
     "- straightforward\n",
     "- similar to other text editors like Notepad\n",
     "- people used to say it's \"bloated\", but nowadays it's lightweight in comparison\n",
-    "- apparently has a long startup time"
+    "- apparently has a long startup time\n",
+    "- nano is a non-GUI version"
    ]
   },
   {
@@ -179,7 +180,7 @@
     "- I've seen a nasty fight in our department about vim and also I'm a straightforward kind of person\n",
     "- something is not working properly on the GNU website, so I could not try it out, or provide a screenshare for this class\n",
     "- I did not like the vim tutorial\n",
-    "- this was to be expected, as I haven't really had the time to try it"
+    "- this was to be expected, as I haven't really had the time to learn the editor"
    ]
   },
   {
@@ -216,7 +217,8 @@
     "- modern IDEs are incredibly powerful resources that can create whole new worlds\n",
     "- very customizable\n",
     "- use multiple languages and programs\n",
-    "- can be useful for beginners with code completion, often linked to Github for help"
+    "- can be useful for beginners with code completion, often linked to Github for help\n",
+    "- Jupyter is an editor, and we already know how to use it! There are other editors besides notebooks"
    ]
   },
   {
